tests/errors/first_stage/.extern/extra_chars/extra_chars.as
; extra characters after .extern argument
.extern myext a

; also occurrs like this (since there are extra characters)
.extern myext, ext2